# GroundTruthImageMatting

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt  Vec.h  actionclass.cpp  actionclass.h  actionthread.cpp  actionthread.h  camera.cpp  camera.h  cameraguiinfo.h  colour.h  colourshader.cpp  colourshader.h  compatabilitylayer.cpp  compatabilitylayer.h  edscontainer.h  edsstreamcontainer.cpp  edsstreamcontainer.h  event.cpp  event.h  groundtruth.cpp  groundtruth.h  groundtruthsource.cpp  image.cpp  image.h  imageshader.cpp  imageshader.h  io.cpp  io.h  mainui.ui  mainui.ui.autosave  openglbox.cpp  openglbox.h  propertymap.cpp  propertymap.h  rawrgbchar.h  rawrgbeds.h  shaderprogram.cpp  shaderprogram.h  source.cpp  vertex.cpp  (+3 more)
